# sharepoint-online-python

./: .env.example  .gitignore  LICENSE  README.md  main.py  requirements.txt  setup.cfg  test.py
src/sharepoint_online/: __init__.py  auth.py  sharepoint.py
