[metadata]
name = sharepoint-online-python
version = 0.0.8
license = MIT License
author = James Grogan
author_email = james@grogan.tech
description = Allows users to access Sharepoint data within a locally running Python script.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamesgrogantech/sharepoint-online-python
project_urls =
    Bug Tracker = https://github.com/jamesgrogantech/sharepoint-online-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Topic :: Internet :: WWW/HTTP
    

[options]
package_dir =
    = src
packages = find:
install_requires =
    requests
    pkce
    pandas
python_requires = >=3.6

[options.packages.find]
where = src